--- a/index.html
+++ b/index.html
@@ -1,1 +1,69 @@
-<html> <head> <title>My Homepage</title> </head> <body> <h1>My homepage!</h1> <h2> ;) </h2> </body> </html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../CR/home.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <title>Compass Rose - Home</title>
+</head>
+<body>
+    <header>
+        <a id="header1" href="#hero">Compass Rose</a>
+        <a id="header2" href="#aboutus">about us</a>
+        <a id="header3" href="#products">products</a>
+        <a id="header4" href="#contactus">contact us</a>
+    </header>
+    <div id="hero">
+        <div id="hero-text">
+            <h1><span>high quality</span><br>steel products</h1>
+            <a class="button" href="">get a free quotation</a>  
+        </div>
+    </div>
+    <div id="aboutus">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br><br> Elementum sagittis vitae et leo. Maecenas sed enim ut sem viverra. Mauris commodo quis imperdiet massa tincidunt nunc pulvinar. Neque vitae tempus quam pellentesque nec nam aliquam sem et. <br><br> Ut lectus arcu bibendum at varius vel pharetra vel. Nisl nunc mi ipsum faucibus vitae aliquet nec ullamcorper sit.<br><br> Elementum sagittis vitae et leo. Maecenas sed enim ut sem viverra. Mauris commodo quis imperdiet massa tincidunt nunc pulvinar. Neque vitae tempus quam pellentesque nec nam aliquam sem et.</p>
+        <img src="../CR/aboutus1.jpg" alt="welding, blue sparks">
+    </div>
+    <div id="products">
+        <a class="product" id="threezerofour" href="">
+            <h2>304 stainless steel</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Habitant morbi tristique senectus et netus et malesuada fames ac.</p>
+            <h6>browse 304 products</h6>
+        </a>
+        <a class="product" id="threeonesix" href="">
+            <h2>316 stainless steel</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Habitant morbi tristique senectus et netus et malesuada fames ac.</p>
+            <h6>browse 316 products</h6>
+        </a>
+        <a class="product" id="galvanized" href="">
+            <h2>galvanized steel</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Habitant morbi tristique senectus et netus et malesuada fames ac.</p>
+            <h6>browse galvanized products</h6>
+        </a>
+    </div>
+    <div id="contactus">
+        <div class="enquiry">
+         <form action="'">
+            <h2 id="enquiryheading">Send us an enquiry</h2>
+            <label for="name"><b>Name</b></label>
+            <input type="text" placeholder="Enter Name" name="name" required>
+
+            <label for="email"><b>Email</b></label>
+            <input type="text" placeholder="Enter Email" name="email" required>
+
+            <label for="enquiry"></label>
+            <textarea id="enquiry" name="enquiry" rows="6" cols="50">Compass Rose is the best.....</textarea>
+
+            <button type="submit" class="submit">Submit</button>
+         </form>
+       </div>
+       <div class="contactinfo">
+        <h2>mobile/viber: 9696969</h2>
+        <h2>email: compassrose@gmail.com</h2>
+        <h2>address: compass rose ge, male' magu</h2>
+       </div>
+    </div>
+</body>
+</html>
