--- a/home.html
+++ b/home.html
@@ -28,8 +28,8 @@
     </header>
     <div id="hero">
         <div id="hero-text">
-            <h1><span>high quality</span><br>steel products</h1>
-            <a class="button" href="">get a free quotation</a>  
+            <h1><span class="white">High</span> <span class="blue">Quality</span><br><span class="white">Steel</span> <span class="blue" id="nomobile">Products</span></h1>
+            <a class="button" href="" autofocus>get a free quotation</a>  
         </div>
     </div>
     <div id="aboutus">
@@ -57,22 +57,19 @@
         <div class="enquiry">
          <form action="'">
             <h2 id="enquiryheading">Send us an enquiry</h2>
-            <label for="name"><b>Name</b></label>
-            <input type="text" placeholder="Enter Name" name="name" required>
-
             <label for="email"><b>Email</b></label>
             <input type="text" placeholder="Enter Email" name="email" required>
 
-            <label for="enquiry"></label>
-            <textarea id="enquiry" name="enquiry" rows="6" cols="50">Compass Rose is the best.....</textarea>
+            <label for="enquiry">Enquiry</label>
+            <textarea id="enquiry" name="enquiry" rows="3" cols="50"></textarea>
 
             <button type="submit" class="submit">Submit</button>
          </form>
        </div>
        <div class="contactinfo">
-        <h2>mobile/viber: 9696969</h2>
-        <h2>email: compassrose@gmail.com</h2>
-        <h2>address: compass rose ge, male' magu</h2>
+        <h2><span>mobile/viber:</span> 9696969</h2>
+        <h2><span>email:</span> compassrose@gmail.com</h2>
+        <h2><span>address:</span> compass rose ge, male' magu</h2>
        </div>
     </div>
 </body>
