--- a/home.html
+++ b/home.html
@@ -26,17 +26,17 @@
             <a id="header4" href="#contactus">contact us</a>
         </nav>
     </header>
-    <div id="hero">
+    <div class="section" id="hero">
         <div id="hero-text">
             <h1><span class="white">High</span> <span class="blue">Quality</span><br><span class="white">Steel</span> <span class="blue" id="nomobile">Products</span></h1>
             <a class="button" href="" autofocus>get a free quotation</a>  
         </div>
     </div>
-    <div id="aboutus">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br><br> Elementum sagittis vitae et leo. Maecenas sed enim ut sem viverra. Mauris commodo quis imperdiet massa tincidunt nunc pulvinar. Neque vitae tempus quam pellentesque nec nam aliquam sem et. <br><br> Ut lectus arcu bibendum at varius vel pharetra vel. Nisl nunc mi ipsum faucibus vitae aliquet nec ullamcorper sit.<br><br> Elementum sagittis vitae et leo. Maecenas sed enim ut sem viverra. Mauris commodo quis imperdiet massa tincidunt nunc pulvinar. Neque vitae tempus quam pellentesque nec nam aliquam sem et.</p>
+    <div class="section" id="aboutus">
+        <p>Lorem ipsum dolor sit amet, <span class="blue">consectetur adipiscing elit</span>, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br><br> Elementum sagittis vitae et leo. Neque vitae tempus quam <span class="blue">pellentesque</span> nec nam aliquam sem et. <br><br> <span class="blue">Ut lectus arcu bibendum at varius vel pharetra vel.</span> Nisl nunc mi ipsum faucibus vitae aliquet nec ullamcorper sit.<br><br> <b>Elementum sagittis vitae et leo. <span class="blue">Maecenas sed enim ut sem viverra.</span> Neque vitae tempus quam pellentesque nec nam aliquam sem et.</b></p>
         <img src="../CR/aboutus1.jpg" alt="welding, blue sparks">
     </div>
-    <div id="products">
+    <div class="section" id="products">
         <a class="product" id="threezerofour" href="">
             <h2>304 stainless steel</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Habitant morbi tristique senectus et netus et malesuada fames ac.</p>
@@ -53,7 +53,7 @@
             <h6>browse galvanized products</h6>
         </a>
     </div>
-    <div id="contactus">
+    <div class="section" id="contactus">
         <div class="enquiry">
          <form action="'">
             <h2 id="enquiryheading">Send us an enquiry</h2>
