--- a/index.html
+++ b/index.html
@@ -8,25 +8,35 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <title>Compass Rose - Home</title>
+    <style>
+        .highlight {
+            scale: 1.2;
+            font-weight: bold;
+            color: var(--accent);
+            transition: 0.2;
+        }
+      </style>
 </head>
 <body>
     <header>
-        <a id="header1" href="#hero">Compass Rose</a>
-        <a id="header2" href="#aboutus">about us</a>
-        <a id="header3" href="#products">products</a>
-        <a id="header4" href="#contactus">contact us</a>
+        <nav>
+            <a id="header1" href="#hero">Compass Rose</a>
+            <a id="header2" href="#aboutus">about us</a>
+            <a id="header3" href="#products">products</a>
+            <a id="header4" href="#contactus">contact us</a>
+        </nav>
     </header>
-    <div id="hero">
+    <div class="section" id="hero">
         <div id="hero-text">
-            <h1><span>high quality</span><br>steel products</h1>
-            <a class="button" href="">get a free quotation</a>  
+            <h1><span class="white">High</span> <span class="blue">Quality</span><br><span class="white">Steel</span> <span class="blue" id="nomobile">Products</span></h1>
+            <a class="button" href="" autofocus>get a free quotation</a>  
         </div>
     </div>
-    <div id="aboutus">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br><br> Elementum sagittis vitae et leo. Maecenas sed enim ut sem viverra. Mauris commodo quis imperdiet massa tincidunt nunc pulvinar. Neque vitae tempus quam pellentesque nec nam aliquam sem et. <br><br> Ut lectus arcu bibendum at varius vel pharetra vel. Nisl nunc mi ipsum faucibus vitae aliquet nec ullamcorper sit.<br><br> Elementum sagittis vitae et leo. Maecenas sed enim ut sem viverra. Mauris commodo quis imperdiet massa tincidunt nunc pulvinar. Neque vitae tempus quam pellentesque nec nam aliquam sem et.</p>
+    <div class="section" id="aboutus">
+        <p>Lorem ipsum dolor sit amet, <span class="blue">consectetur adipiscing elit</span>, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br><br> Elementum sagittis vitae et leo. Neque vitae tempus quam <span class="blue">pellentesque</span> nec nam aliquam sem et. <br><br> <span class="blue">Ut lectus arcu bibendum at varius vel pharetra vel.</span> Nisl nunc mi ipsum faucibus vitae aliquet nec ullamcorper sit.<br><br> <b>Elementum sagittis vitae et leo. <span class="blue">Maecenas sed enim ut sem viverra.</span> Neque vitae tempus quam pellentesque nec nam aliquam sem et.</b></p>
         <img src="../CR/aboutus1.jpg" alt="welding, blue sparks">
     </div>
-    <div id="products">
+    <div class="section" id="products">
         <a class="product" id="threezerofour" href="">
             <h2>304 stainless steel</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Habitant morbi tristique senectus et netus et malesuada fames ac.</p>
@@ -43,27 +53,65 @@
             <h6>browse galvanized products</h6>
         </a>
     </div>
-    <div id="contactus">
+    <div class="section" id="contactus">
         <div class="enquiry">
          <form action="'">
             <h2 id="enquiryheading">Send us an enquiry</h2>
-            <label for="name"><b>Name</b></label>
-            <input type="text" placeholder="Enter Name" name="name" required>
-
             <label for="email"><b>Email</b></label>
             <input type="text" placeholder="Enter Email" name="email" required>
 
-            <label for="enquiry"></label>
-            <textarea id="enquiry" name="enquiry" rows="6" cols="50">Compass Rose is the best.....</textarea>
+            <label for="enquiry">Enquiry</label>
+            <textarea id="enquiry" name="enquiry" rows="3" cols="50"></textarea>
 
             <button type="submit" class="submit">Submit</button>
          </form>
        </div>
        <div class="contactinfo">
-        <h2>mobile/viber: 9696969</h2>
-        <h2>email: compassrose@gmail.com</h2>
-        <h2>address: compass rose ge, male' magu</h2>
+        <h2><span>mobile/viber:</span> 9696969</h2>
+        <h2><span>email:</span> compassrose@gmail.com</h2>
+        <h2><span>address:</span> compass rose ge, male' magu</h2>
        </div>
     </div>
 </body>
+<script>
+    document.addEventListener('scroll', () => {
+        const header = document.querySelector('header');
+
+        if (((window.scrollY > 0) && (window.scrollY < 1500)))  {
+            header.classList.add('scrolled')
+        } else  if (window.scrollY > 1620) {
+            header.classList.add('scrolled')
+        } else {
+            header.classList.remove('scrolled')
+        }
+    })
+</script>
+<script>
+    window.addEventListener('scroll', function() {
+
+      const scrollPosition = window.scrollY;
+
+      const headerHeight = document.querySelector('header').offsetHeight;
+
+      const sectionPositions = [
+        document.querySelector('#aboutus').offsetTop,
+        document.querySelector('#products').offsetTop,
+        document.querySelector('#contactus').offsetTop,
+      ];
+
+      let currentSectionIndex = 0;
+      for (let i = 0; i < sectionPositions.length; i++) {
+        if (scrollPosition >= sectionPositions[i] - headerHeight) {
+          currentSectionIndex = i + 1;
+        }
+      }
+
+      const navLinks = document.querySelectorAll('nav a');
+      navLinks.forEach(link => {
+        link.classList.remove('highlight');
+      });
+
+      navLinks[currentSectionIndex].classList.add('highlight');
+    });
+  </script>
 </html>
