--- a/index.html
+++ b/index.html
@@ -72,46 +72,6 @@
         <h2><span>address:</span> compass rose ge, male' magu</h2>
        </div>
     </div>
+    <script src="./home.js"></script>
 </body>
-<script>
-    document.addEventListener('scroll', () => {
-        const header = document.querySelector('header');
-
-        if (((window.scrollY > 0) && (window.scrollY < 1500)))  {
-            header.classList.add('scrolled')
-        } else  if (window.scrollY > 1620) {
-            header.classList.add('scrolled')
-        } else {
-            header.classList.remove('scrolled')
-        }
-    })
-</script>
-<script>
-    window.addEventListener('scroll', function() {
-
-      const scrollPosition = window.scrollY;
-
-      const headerHeight = document.querySelector('header').offsetHeight;
-
-      const sectionPositions = [
-        document.querySelector('#aboutus').offsetTop,
-        document.querySelector('#products').offsetTop,
-        document.querySelector('#contactus').offsetTop,
-      ];
-
-      let currentSectionIndex = 0;
-      for (let i = 0; i < sectionPositions.length; i++) {
-        if (scrollPosition >= sectionPositions[i] - headerHeight) {
-          currentSectionIndex = i + 1;
-        }
-      }
-
-      const navLinks = document.querySelectorAll('nav a');
-      navLinks.forEach(link => {
-        link.classList.remove('highlight');
-      });
-
-      navLinks[currentSectionIndex].classList.add('highlight');
-    });
-  </script>
 </html>
