1st draft homepage

--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
             <a id="header2" href="#aboutus" onclick="autoClose()">about us</a>
             <a id="header3" href="#products" onclick="autoClose()">products</a>
             <a id="header4" href="#contactus" onclick="autoClose()">contact us</a>
-            <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+            <a href="javascript:void(0);" class="icon" id="icon" onclick="myFunction()">&#9776;</a>
     </header>
     <div class="section" id="hero">
         <div id="hero-text">
